# Serava

./: .gitignore  Cargo.toml  config.toml
src/: config.rs  main.rs  proxy.rs  req.rs  resp.rs  static.rs
static/: 404.html
