[package]
name = "serava"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
reqwest = { version = "0.12", features = ["stream"] }
serde = "1.0.228"
tokio = { version = "^1.48.0", features = ["full"] }
toml = "0.9.8"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5.7"
